Adicionado a em ul

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="navegacao">
             <nav>
                 <ul>
-                    <li>Conteúdo</li>
-                    <li>Quiz</li>
+                    <li><a href="#">Conteúdo</a></li>
+                    <li><a href="#">Quiz</a></li>
                 </ul>
             </nav>
             <button><img src="./assets/images/menu.png" alt="Imagem de menu hamburguer"></button>
